// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component.Header should render user component if user is defined 1`] = `
<styled.header>
  <Styled(Logotype) />
  <styled.h1>
    Bryggan
  </styled.h1>
  <nav>
    <styled.ul>
      <styled.li>
        <Styled(NavLink)
          to="/tidningen"
        >
          Tidningen
        </Styled(NavLink)>
      </styled.li>
      <styled.li>
        <Styled(NavLink)
          to="/installningar"
        >
          Inställningar
        </Styled(NavLink)>
      </styled.li>
    </styled.ul>
  </nav>
  <styled.div>
    <styled.div>
      <Styled(Gravatar)
        alt=""
        email="adam@fransvilhelm.com"
        height="28"
        width="28"
      />
    </styled.div>
    <styled.p>
      adam@fransvilhelm.com
    </styled.p>
    <styled.p>
      <styled.button
        onClick={[Function]}
      >
        Logga ut 
        <SignOut
          baseline={true}
        />
      </styled.button>
    </styled.p>
  </styled.div>
</styled.header>
`;

exports[`Component.Header should render without user 1`] = `
<styled.header>
  <Styled(Logotype) />
  <styled.h1>
    Bryggan
  </styled.h1>
  <nav>
    <styled.ul>
      <styled.li>
        <Styled(NavLink)
          to="/tidningen"
        >
          Tidningen
        </Styled(NavLink)>
      </styled.li>
      <styled.li>
        <Styled(NavLink)
          to="/installningar"
        >
          Inställningar
        </Styled(NavLink)>
      </styled.li>
    </styled.ul>
  </nav>
</styled.header>
`;
